Fix "Turn on Bluetooth" chooser url link on ChromeOS

This CL changes the url string to "chrome://settings/#Bluetooth".

BUG=720248

Review-Url: https://codereview.chromium.org/2873963007
Cr-Commit-Position: refs/heads/master@{#471130}