chrome/common/url_constants.cc
@@ -824,7 +824,7 @@ const char kChooserBluetoothOverviewURL[] =
 
 const char kBluetoothAdapterOffHelpURL[] =
 #if defined(OS_CHROMEOS)
-    "chrome://settings/search#Bluetooth";
+    "chrome://settings/#Bluetooth";
 #else
     "https://support.google.com/chrome?p=bluetooth";
 #endif
